	princomp, eigen and svd. For svd returns squares of singular
	values, and for prcomp and princomp squares of 'sdev'.

	* protest: observed value of test statistic is now considered as
	one of the permutations. Default N.perm decreased to 999 to account
	for this.

	* envfit (vectorfit, factorfit): observed value of test statistic
	is now considered as one of the permutations.

Version 1.16-18 (closed May 14, 2009)

	* tsallis: got new argument 'hill' similar to that of renyi.

	* twostagechao: function that calculates multiple-community
	similarity based on Chao et al. 2008 (Biometrics 64, 1178-86).
	Some debugging is needed since it cannot reproduce the numbers
	in Table 3 exactly (lower estimates and SEs). The Rd file
	also needs more details.

	* anova.cca: there was a name clash and failure in
	anova.ccabymargin, anova.ccabyaxis and anova.ccabyterm if data
	were indexed with 'i' in the fitted model. Now the internal
	indexing uses less likely name (.ITRM) to avoid name clashes.

	* orditkplot: copes with missing or NaN scores (omits them).

	* ordixyplot: failed in constrained ordination (cca, rda,
	capscale). Was broken in rev108 on Nov 7, 2007(!). The biplot was
	rotated 90 degrees: it seems that lattice calls x y and y x. 

	* ordixyplot & ordisplom: Gained a new type = "arrows" that is a
	Lattice version of ordiarrows.

	* RsquareAdj: defined as generic function. The old RsquareAdj is
	now the "default" method, and there are specific methods for
	"rda", "cca" (= NA), "lm" and "glm" objects. Not yet documented,
	but functions are listed as aliases in varpart.Rd. On Pierre
	Legendre's request.
	
Version 1.16-17 (closed April 15, 2009)

	* closed concurrently with the release of vegan 1.15-2.

	* spantree.Rd: example plots use type = "t" to demonstrate the use
	of ordilabel(). 

	* nestedtemp: docs tell that Carsten Dormann's bipartite package
	has a direct port of BINMATNEST programme of Rodriquez-Girones &
	Santamaria. 
